# mpi_frecuencias

./: CMakeLists.txt  main.cpp
